Minor bug crush
Fixed table of content width on short titles; pushed quiz icon up a bit
to align text; use box-sizing to remove horizontal scrolling

--- a/sources/css/sbplus_fonts.scss
+++ b/sources/css/sbplus_fonts.scss
@@ -1,15 +1,3 @@
-@mixin sbplusFonts() {
-    font-family: 'sbplus';
-	speak: none;
-	font-style: normal;
-	font-weight: normal;
-	font-variant: normal;
-	text-transform: none;
-	line-height: rem( 17px );
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-}
-
 @font-face {
 	font-family: 'sbplus';
 	src:url('../fonts/sbplus.eot?-918svh');
@@ -21,61 +9,75 @@
 	font-style: normal;
 }
 
+.defaultFontSettings {
+    font-family: 'sbplus';
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: rem( 17px );
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
 .light {
+    display: inline-block;
+    margin-top: rem( -2px );
     @include opacity( .4 );
 }
 
 .infoIcn:before {
-    @include sbplusFonts;
+    @extend .defaultFontSettings;
     content: "\e363";
 }
 
 .playBtn:before {
-    @include sbplusFonts;
+    @extend .defaultFontSettings;
     content: "\e385";
 }
 
 .magnifyIcon:before {
-    @include sbplusFonts;
+    @extend .defaultFontSettings;
     content: "\e1bc";
 }
 
 #leftBtn:before {
-    @include sbplusFonts;
+    @extend .defaultFontSettings;
     content: "\e3b3";
 }
 
 #rightBtn:before {
-    @include sbplusFonts;
+    @extend .defaultFontSettings;
     content: "\e3b1";
 }
 
 #fontMinusBtn:before {
-    @include sbplusFonts;
+    @extend .defaultFontSettings;
     content: "\e375";
 }
 
 #fontPlusBtn:before {
-    @include sbplusFonts;
+    @extend .defaultFontSettings;
     content: "\e376";
 }
 
 .icon-notification:before {
-    @include sbplusFonts;
+    @extend .defaultFontSettings;
 	content: "\e358";
 }
 
 .icon-checkmark:before {
-    @include sbplusFonts;
+    @extend .defaultFontSettings;
 	content: "\e368";
 }
 
 .icon-assessement:before {
-    @include sbplusFonts;
+    @extend .defaultFontSettings;
 	content: "\e083";
 }
 
 .icon-arrow-down:before {
-    @include sbplusFonts;
+    @extend .defaultFontSettings;
 	content: "\e416";
 }
